improved m+ cursor accuracy, horizontal cursor is disrupted by ir, ir is therefore hidden at < -0.25 and > 0.25 for m+ and it's better to turn it off altogether ingame to avoid horizontal jumps when the ir goes in and out of visibility, vertical cursor is controller by gyro and accelerometer pitch and will drift back to center unless the acc is pitched, the ir position therefore control pitch too when m+ is active
split ir and gyro sensitivity for better control, the ir sensitivity also applies to the accelerometer vertical pitch from ir data

added modifier key to cursor that allow fast m+ forces when held down

addressed the ui issues with the modeless wiimote dialog

capture mouse added to hotkeys

fixed an array overrun in the thrust class that caused crashes

renamed tilt to rotate, yaw doesn't really fit with the name tilt

--- a/Languages/po/ar.po
+++ b/Languages/po/ar.po
@@ -4807,7 +4807,7 @@ msgid "Threshold"
 msgstr "بداية"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
+msgid "Rotate"
 msgstr "إمالة"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
