--- a/Languages/po/es.po
+++ b/Languages/po/es.po
@@ -4760,7 +4760,7 @@ msgid "Threshold"
 msgstr "Límite"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
+msgid "Rotate"
 msgstr "Inclinar"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
