--- a/Languages/po/hu.po
+++ b/Languages/po/hu.po
@@ -4987,7 +4987,7 @@ msgid "Threshold"
 msgstr "Küszöbérték"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
+msgid "Rotate"
 msgstr "Billentés"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
