--- a/Languages/po/it.po
+++ b/Languages/po/it.po
@@ -4885,7 +4885,7 @@ msgid "Threshold"
 msgstr "Sensibilità"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
+msgid "Rotate"
 msgstr "Inclina"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
