--- a/Languages/po/pt_BR.po
+++ b/Languages/po/pt_BR.po
@@ -4981,7 +4981,7 @@ msgid "Threshold"
 msgstr "Threshold"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
+msgid "Rotate"
 msgstr "Inclinar"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
