--- a/Languages/po/fr.po
+++ b/Languages/po/fr.po
@@ -4764,8 +4764,8 @@ msgid "Threshold"
 msgstr "Seuil"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
-msgstr "Tilt"
+msgid "Rotate"
+msgstr "Rotate"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
 #: Source/Core/DolphinWX/Src/GameListCtrl.cpp:256
