--- a/Languages/po/ja.po
+++ b/Languages/po/ja.po
@@ -4976,7 +4976,7 @@ msgid "Threshold"
 msgstr "しきい値"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
+msgid "Rotate"
 msgstr "傾き"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
