--- a/Languages/po/nb.po
+++ b/Languages/po/nb.po
@@ -4962,8 +4962,8 @@ msgid "Threshold"
 msgstr "Terskel"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
-msgstr "Tilt"
+msgid "Rotate"
+msgstr "Rotate"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
 #: Source/Core/DolphinWX/Src/GameListCtrl.cpp:256
