--- a/Languages/po/pl.po
+++ b/Languages/po/pl.po
@@ -4762,7 +4762,7 @@ msgid "Threshold"
 msgstr "Threshold"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
+msgid "Rotate"
 msgstr "Przechylenie"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
