--- a/Languages/po/ru.po
+++ b/Languages/po/ru.po
@@ -4847,7 +4847,7 @@ msgid "Threshold"
 msgstr "Порог"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
+msgid "Rotate"
 msgstr "Наклон"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
