--- a/Languages/po/zh_CN.po
+++ b/Languages/po/zh_CN.po
@@ -4796,8 +4796,8 @@ msgid "Threshold"
 msgstr "闸值"
 
 #: Source/Core/Core/Src/HW/WiimoteEmu/WiimoteEmu.cpp:266
-msgid "Tilt"
-msgstr "Tilt"
+msgid "Rotate"
+msgstr "Rotate"
 
 #: Source/Core/DolphinWX/Src/MemcardManager.cpp:625
 #: Source/Core/DolphinWX/Src/GameListCtrl.cpp:256
